feat: js kiritilgan text chiqarish

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="bizniki">
                 Hello World
             </div>
-            <input class="format" placeholder="Ismingizni yozing">
+            <input type="text" id="soz" class="format" placeholder="Ismingizni yozing">
             <div class="card" style="width: 18rem;">
                 <img src="https://pngimg.com/uploads/dog/dog_PNG50348.png" class="card-img-top" alt="...">
                 <div class="card-body">
