feat: ortacha js bilan harakat

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <div>
-            <div class="bizniki">
+            <div id="bosh" class="bizniki">
                 Hello World
             </div>
             <input type="text" id="soz" class="format" placeholder="Ismingizni yozing">
