--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <div id="bosh" class="bizniki">
                 Hello World
             </div>
+            <h1>Manabu yerga yozing</h1>
             <input type="text" id="soz" class="format" placeholder="Ismingizni yozing">
             <div class="card" style="width: 18rem;">
                 <img src="https://pngimg.com/uploads/dog/dog_PNG50348.png" class="card-img-top" alt="...">
