--- a/index.html
+++ b/index.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="./main.css">
-    </head>
-
-    <body>
-        <div>
-            <div id="bosh" class="bizniki">
-                Hello World
-            </div>
-            <h1>Manabu yerga yozing</h1>
-            <input type="text" id="soz" class="format" placeholder="Ismingizni yozing">
-            <div class="card" style="width: 18rem;">
-                <img src="https://pngimg.com/uploads/dog/dog_PNG50348.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <button type="button" class="btn btn-primary" onclick="salomber()">Primary</button>
-                  <button id="butt1" type="button" class="btn btn-primary">Tugma</button>
-                </div>
-              </div>
-        </div>
-
-        <script src="./harakat.js"></script>
-
-    </body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online shop</title>
+</head>
+<body>
+    <p>
+        Globol market
+    </p>
+    
+</body>
 </html>
